# openFEM

./: .gitignore  CMakeLists.txt  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  start_dev.sh  stop_dev.sh
docker/: Dockerfile  start-gui.sh
docs/: architecture.md  commands.md
include/cli/: InteractiveCLI.hpp
include/elements/: BeamElement.hpp  Element.hpp  ShellElement.hpp  TetraElement.hpp
include/fem/: Assembler.hpp  LoadResolver.hpp  Model.hpp  Solver.hpp  StressResolver.hpp
include/geometry/: StepImporter.hpp
include/io/: ModelSerializer.hpp
include/mesh/: Mesh.hpp  Mesher.hpp
src/: main.cpp
src/cli/: InteractiveCLI.cpp
src/elements/: BeamElement.cpp  ShellElement.cpp  TetraElement.cpp
src/fem/: Assembler.cpp  LoadResolver.cpp  Solver.cpp  StressResolver.cpp
src/geometry/: StepImporter.cpp
src/io/: ModelSerializer.cpp
src/mesh/: Mesher.cpp
src/tests/: test_beam_frame.cpp
web/: index.html
